# spatialite-tools

./: CMakeLists.txt  CMakePresetsBase.json  Makefile-static-MinGW  Makefile-static-mingw32  Makefile-static-mingw64  Makefile.am  Makefile.in  config-msvc.h  config.h  config.h.in  configure  configure.ac  exif_loader.c  makefile.vc  makefile64.vc  nmake64.opt  shp_doctor.c  shp_sanitize.c  spatialite_dem.c  spatialite_dxf.c  spatialite_gml.c  spatialite_network.c  spatialite_osm_filter.c  spatialite_osm_map.c  spatialite_osm_net.c  spatialite_osm_overpass.c  spatialite_osm_raw.c  spatialite_tool.c  spatialite_xml_load.c  spatialite_xml_print.c  spatialite_xml_validator.c
cmake/: config.h.cmake.in  configure.cmake
